# advent2022

./: .gitignore  README.md  advent2022.sln
01/: main.py
02/: main.py
03/: pyproject.toml
03/a03/: __init__.py  main.py  run.py  two.py
03/tests/: test_03.py  test_03_2.py
a04/: README.rst  pyproject.toml
a04/src/a04/: main.py  run.py
a04/tests/: test_a04.py
src/Day2/: Day2.csproj  Game.cs  GameResult.cs  Program.cs  Result.cs  Tool.cs  ToolMap.cs
src/day1/: ListResult.cs  Program.cs  Puzzle.cs  Result.cs  day1.csproj
tests/Day2.Tests/: Day2.Tests.csproj  ScoreFirstGameTest.cs
tests/day1.tests/: FindHeaviestTest.cs  UnitTest1.cs  day1.tests.csproj
