[tool.poetry]
name = "a04"
version = "0.1.0"
description = ""
authors = ["Jens Carlén <jens.carlen@offerta.se>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "a04.run:run"
